--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                                 v-bind:departments="departments"
                                 v-bind:selected="selectDepartment"
                                 v-on:selectok="select"
+                                v-on:foundedok="founded"
                             >
                             </choose-department><br>
                         </div><br><br>
@@ -59,6 +60,7 @@
                                 v-bind:courses="courses"
                                 v-bind:selected_d="selectDepartment"
                                 v-bind:selected_c="selectCourses"
+                                v-bind:find_name="foundName"
                                 v-on:add-course="addCourse"
                             >
                             </course-anslist>
