feat: 新增可回傳分享網址的按鈕

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://github.com/snsd0805/NCNU_Course">Github</a></li>
                         
                         <li v-if="token==''" class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href='#' v-on:click="login()">Facebook登入</a></li>
-                        <li v-if="token!=''" class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#" v-on:click="logout()">登出Facebook—{{user}}</a></li>
+                        <li v-if="token!=''" class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#" v-on:click="logout()">登出Facebook—{{user.name}}</a></li>
 
                     </ul>
                 </div>
@@ -60,6 +60,9 @@
                         </div>
                         <div class="col-4">
                             <div><button class="btn btn-success" @click="generatePic()">下載圖檔</button></div>
+                        </div>
+                        <div class="col-4">
+                            <div><button class="btn btn-primary" @click="share()">分享課表</button></div>
                         </div>
                     </div>
                 </div>
