refactor: use simple route

--- a/index.html
+++ b/index.html
@@ -18,102 +18,8 @@
     </head>
     <body id="page-top">
 
-
-
         <div id='main'>
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">暨大排課表</a>
-                <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://github.com/snsd0805/NCNU_Course">Github</a></li>
-                        
-                        <li v-if="token==''" class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href='#' v-on:click="login()">Facebook登入</a></li>
-                        <li v-if="token!=''" class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#" v-on:click="logout()">登出Facebook—{{user}}</a></li>
-
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <br><br>
-        <!-- Portfolio Section-->
-        <section class="page-section portfolio" id="portfolio">
-            <div class="container" id='table'>
-                <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">課表</h2>
-                <!-- Icon Divider-->
-                <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <div class="divider-custom">
-                    <div v-if="token!=''"><button class="btn btn-info" @click="saveCourseTable()">儲存</button></div>
-                    <div v-if="token==''"><button class="btn btn-info" @click="saveCourseTable()">儲存(必須登入Facebook帳號)</button></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-3">
-                        <div class="row">
-                            <choose-department 
-                                v-bind:departments="departments"
-                                v-bind:selected="selectDepartment"
-                                v-on:selectok="select"
-                                v-on:foundedok="founded"
-                            >
-                            </choose-department><br>
-                        </div><br><br>
-                        <div class="row">
-                            <course-anslist
-                                v-bind:courses="courses"
-                                v-bind:selected_d="selectDepartment"
-                                v-bind:selected_c="selectCourses"
-                                v-bind:find_name="foundName"
-                                v-on:add-course="addCourse"
-                                v-on:show-temp="saveTemp"
-                                v-on:delete-temp="deleteTemp"
-                            >
-                            </course-anslist>
-                        </div><br><br>
-                    </div>
-
-                    <div class="col-lg-9 table-responsive " >
-                        <course-table
-                            v-bind:selectCourses="selectCourses"
-                            v-bind:select_c="selectCourses"
-                            v-on:remove-course="removeCourse"
-                        ></course-table>
-                    </div>
-                </div>
-                <!-- Portfolio Grid Items-->
-            </div>
-        </section>
-
-
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">資訊公告</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">×</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        已經更新為 1092 新課表<br>
-                        但因學校未更新通識課資料，因此還沒有「通識課程分類」<br><br>
-                        2021 01/14 更新
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">我知道了</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+            <router-view></router-view>
         </div>
 
         
@@ -131,12 +37,14 @@
         <script src="assets/mail/jqBootstrapValidation.js"></script>
         <script src="assets/mail/contact_me.js"></script>
         <!-- Core me JS-->
+        <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
         <script src="js/scripts.js"></script>
         <script src='js/vue.js'></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>        
         <script src="js/components/table.vue"></script>        
         <script src="js/components/chooseDepartment.vue"></script>        
         <script src="js/components/coursesList.vue"></script>        
+        <script src="js/components/main.vue"></script>        
         <script src="js/index.vue"></script>
         <script>
             $(window).ready(() => {
