feat: 完成分享頁面的前端與後端

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <script src="js/components/chooseDepartment.vue"></script>        
         <script src="js/components/coursesList.vue"></script>        
         <script src="js/components/main.vue"></script>        
+        <script src="js/components/share.vue"></script>        
         <script src="js/index.vue"></script>
         <script>
             $(window).ready(() => {
