--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>暨大排課表</title>
+        <meta name="description" content="你還在用紙筆或Excel在安排下學期的課表嗎？「暨大排課表」幫你篩選衝堂、科系分類、通識課程分類，讓你輕鬆排課表！" />
+        <meta name="author" content="snsd0805" />
+		<title>暨大排課表</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
