feat: Google Login button & get JWT

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
         <script src="js/components/main.vue"></script>        
         <script src="js/components/share.vue"></script>        
         <script src="js/index.vue"></script>
+        <!-- Google Login -->
+        <script src="https://accounts.google.com/gsi/client" async></script>
+		<!-- JWT decode for Google JWT -->
+		<script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
+
+
         <script>
             $(window).ready(() => {
                 $('#myModal').modal('show');
