fix: change jwt-decode cdn link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- Google Login -->
         <script src="https://accounts.google.com/gsi/client" async></script>
 		<!-- JWT decode for Google JWT -->
-		<script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
+		<script src="https://unpkg.com/jwt-decode@4.0.0/build/cjs/index.js"></script>
 
 
         <script>
